@@ -1,2 +1,6 @@
 This is ser2net, a program for allowing network connections to serial
 ports.  See the man page for information about using the program.
+
+Note that ser2net supports RFC 2217 (remote control of serial port
+parameters), but you must have a complient client.  The only one I
+know if is kermit (http://www.columbia.edu/kermit).
