@@ -34,7 +34,8 @@
 #            of data bits.  [-]XONXOFF turns on (- off) XON/XOFF
 #            support.  [-]RTSCTS  turns on (- off) hardware flow
 #            control and [-]LOCAL turns off (- on) monitoring of
-#            the modem lines.
+#            the modem lines.  The "remctl" option allow remote
+#	     control (ala RFC 2217) of serial-port configuration.
 #
 # Note that the same device can be listed multiple times under different
 # ports, this allows the same serial port to have both telnet and raw
@@ -47,7 +48,7 @@
 2005:raw:5:/dev/ttyS4:9600
 2006:raw:5:/dev/ttyS5:9600
 2007:raw:5:/dev/ttyS6:9600
-3001:telnet:0:/dev/ttyS0:19200
+3001:telnet:0:/dev/ttyS0:19200 remctl
 3011:telnet:3:/dev/ttyS0:19200
 #3002:telnet:0:/dev/ttyS1:9600
 3003:telnet:0:/dev/ttyS2:9600
